--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -50,7 +50,7 @@
 
 <div class="row">
     <div class="container">
-        <div class="col-md-6 offset-md-3 text-center">
+        <div class="col-md-7 offset-md-3 text-center">
             <h2 class="card-sec-title">DDW Post-Meeting Resources</h2>
             <div class="col-4 offset-4">
                 <div class="underline"></div>
@@ -118,7 +118,7 @@
 <div class="row featured">
     <div class="container">
         <div class="col-md-6 offset-md-3 text-center">
-            <h2 class="by-nums-title"><b>Featured Blog Posts</b></h2>
+            <h2 class="card-sec-title">Featured Blog Posts</h2>
             <div class="col-4 offset-4">
                 <div class="underline"></div>
             </div>
