--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -39,7 +39,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="card-title">
-                        <h2>Edit: <b>{{ page.title }}</b></h2>
+                        <h2>Edit: {{ page.title }}</h2>
                     </div>
 
                     <form [formGroup]="editPageForm"
@@ -86,9 +86,7 @@
                         </div>
 
                         <div class="form-group" *ngIf="isExtURLPage">
-                            <label>External URL <br>
-                                <p class="alert alert-info">All values are needed if this is an external URL!</p>
-                            </label>
+                            <label>External URL</label>
                             <input type="url"
                                    class="form-control"
                                    [class.invalid]="!f.extURL.valid && f.extURL.touched"
