--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.css
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.css
@@ -6,3 +6,9 @@ img.profile-image {
 a.displayName {
     text-decoration: none;
 }
+
+a.page-link {
+    font-size: 14px !important;
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    text-decoration: none;
+}
