Added pages sorted by category in sidenav for easier access

--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -37,6 +37,36 @@
                 </a>
             </li>
             <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/register']" class="sidenav-link">
+                    <div><i class="fal fa-pen-nib"></i>&nbsp;Register</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/attendee-planning']" class="sidenav-link">
+                    <div><i class="fal fa-book-reader"></i>&nbsp;Attendee Planning</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/education']" class="sidenav-link">
+                    <div><i class="fal fa-graduation-cap"></i>&nbsp;Education</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/exhibitor-information']" class="sidenav-link">
+                    <div><i class="fal fa-info"></i>&nbsp;Exhibitor Info</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/news-and-media']" class="sidenav-link">
+                    <div><i class="fal fa-newspaper"></i>&nbsp;News & Media</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/presenters']" class="sidenav-link">
+                    <div><i class="fal fa-mouse-pointer"></i>&nbsp;Presenters</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/pages/new']" class="sidenav-link">
                     <div><i class="fal fa-file-plus"></i>&nbsp;New Page</div>
                 </a>
