Calendar now has CRUD operations. Fixed bug where all pages rendering the /register/:id. all page category btns now take you to their category list, sidenav links have also been added for easier access/organization

--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -84,7 +84,7 @@
                             </a>
                         </td>
                         <td scope="col">
-                            <a [routerLink]="['/admin/pages/', page.url]" class="btn btn-default">
+                            <a [routerLink]="['/admin/', page.category]" class="btn btn-default">
                                 {{ page.category }} <span class="badge">{{ page.sortOrder }}</span>
                             </a>
                         </td>
