Added ability to add new calendar events

--- a/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.css
+++ b/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.css
@@ -2,3 +2,9 @@ label {
     line-height: 1.3em;
     font-size: 16px;
 }
+
+p {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    font-size: 14px;
+    line-height: 1.5;
+}
