--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -97,6 +97,29 @@
         </ul>
     </li>
 
+    <!-- * Calendar * -->
+    <li class="sidenav-item"
+        [ngClass]="{'active open':showCalendarToggle, '':!showCalendarToggle}"
+        *ngIf="isLoggedIn">
+        <a class="sidenav-link sidenav-toggle" (click)="onShowCalendarToggle()">
+            <i class="sidenav-icon ion ion-md-speedometer"></i>
+            <div><i class="fal fa-calendar"></i>&nbsp;Calendar</div>
+        </a>
+
+        <ul class="sidenav-menu">
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/calendar']" class="sidenav-link">
+                    <div><i class="fal fa-calendar-check"></i>&nbsp;All Events</div>
+                </a>
+            </li>
+            <li class="sidenav-item sub-item">
+                <a [routerLink]="['/admin/calendar/new']" class="sidenav-link">
+                    <div><i class="fal fa-calendar-plus"></i>&nbsp;New Event</div>
+                </a>
+            </li>
+        </ul>
+    </li>
+
     <!-- * Cards * -->
     <li class="sidenav-item" *ngIf="isLoggedIn">
         <a [routerLink]="['/admin/cards']" class="sidenav-link">
@@ -140,13 +163,6 @@
         </a>
     </li>
 
-
-    <li class="sidenav-item" *ngIf="isLoggedIn && isAdmin">
-        <a [routerLink]="['/admin/calendar']" class="sidenav-link">
-            <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fal fa-calendar"></i>&nbsp;Calendar</div>
-        </a>
-    </li>
 
     <li class="sidenav-item">
         <a class="sidenav-link" [routerLink]="['/']" target="_blank">
